FIX: Text alignement and pure black text

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,7 @@ header {
 }
 
 .logo a {
-    color: #333;
+    color: black;
     font-size: 1.5rem;
     text-decoration: none;
     font-weight: bold;
@@ -29,7 +29,7 @@ header {
 }
 
 .nav-links a {
-    color: #333;
+    color: black;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 500;
